Finished second project

--- a/index.html
+++ b/index.html
@@ -1,18 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
     <h1>Front End Mentor Challenges (This page is in progress)</h1>
+    <div class="flex">
     <article class="card">
-        <img src="./qr-code-component-main/qr-code-component-sc.jpg" alt=" a preview of the project">
-        <a href="./qr-code-component-main/index.html"> QR Code </a>
+
+        <a href="./qr-code-component-main/index.html"> <img src="./qr-code-component-main/qr-code-component-sc.jpg"
+                alt=" a preview of the project">
+            <p>QR Code</p>
+        </a>
     </article>
-    
-    
+
+    <article class="card">
+
+        <a href="./order-summary-component-main/index.html"> <img src="./order-summary-component-main/order-summary-component-sc.jpg"
+                alt=" a preview of the project">
+            <p>Order Summary</p>
+        </a>
+    </article>
+</div>
+
 </body>
+
 </html>
