--- a/order-summary-component-main/index.html
+++ b/order-summary-component-main/index.html
@@ -7,7 +7,7 @@
   <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="style">
+  <link rel="stylesheet" href="style.css">
 
   <title>Frontend Mentor | Order summary card</title>
 
