--- a/index.html
+++ b/index.html
@@ -11,22 +11,31 @@
 <body>
     <h1>Front End Mentor Challenges (This page is in progress)</h1>
     <div class="flex">
-    <article class="card">
+        <article class="card">
 
-        <a href="./qr-code-component-main/index.html"> <img src="./qr-code-component-main/qr-code-component-sc.jpg"
-                alt=" a preview of the project">
-            <p>QR Code</p>
-        </a>
-    </article>
+            <a href="./qr-code-component-main/index.html"> <img src="./qr-code-component-main/qr-code-component-sc.jpg"
+                    alt=" a preview of the project">
+                <p>QR Code</p>
+            </a>
+        </article>
 
-    <article class="card">
+        <article class="card">
 
-        <a href="./order-summary-component-main/index.html"> <img src="./order-summary-component-main/order-summary-component-sc.jpg"
-                alt=" a preview of the project">
-            <p>Order Summary</p>
-        </a>
-    </article>
-</div>
+            <a href="./order-summary-component-main/index.html"> <img
+                    src="./order-summary-component-main/order-summary-component-sc.jpg" alt=" a preview of the project">
+                <p>Order Summary</p>
+            </a>
+        </article>
+
+        <article class="card">
+
+            <a href="./3-column-preview-card-component-main/index.html"> <img
+                    src="./3-column-preview-card-component-main/3-column-preview-card-component-sc.jpg"
+                    alt=" a preview of the project">
+                <p>3 Column Preview Card</p>
+            </a>
+        </article>
+    </div>
 
 </body>
 
