--- a/index.html
+++ b/index.html
@@ -5,17 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Yeseva+One&display=swap" rel="stylesheet">
+
+
+
+    <title>scasellas | Front End Mentor Challenges</title>
 </head>
 
 <body>
-    <h1>Front End Mentor Challenges (This page is in progress)</h1>
-    <div class="flex">
+    <h1>Front End Mentor Challenges <br>(This page is in progress)</h1>
+    <div class="grid">
         <article class="card">
+            <a href="./qr-code-component-main/index.html">
+                <img src="./qr-code-component-main/qr-code-component-sc.jpg" alt=" a preview of the project">
 
-            <a href="./qr-code-component-main/index.html"> <img src="./qr-code-component-main/qr-code-component-sc.jpg"
-                    alt=" a preview of the project">
                 <p>QR Code</p>
+
             </a>
         </article>
 
@@ -35,6 +43,8 @@
                 <p>3 Column Preview Card</p>
             </a>
         </article>
+
+
     </div>
 
 </body>
