Product Preview Done

--- a/index.html
+++ b/index.html
@@ -40,7 +40,16 @@
             <a href="./3-column-preview-card-component-main/index.html"> <img
                     src="./3-column-preview-card-component-main/3-column-preview-card-component-sc.jpg"
                     alt=" a preview of the project">
-                <p>3 Column Preview Card</p>
+                <p>3 Column Layout</p>
+            </a>
+        </article>
+
+        <article class="card">
+
+            <a href="./product-preview-card-component-main/index.html"> <img
+                    src="./product-preview-card-component-main/product-preview-card-component-sc.jpg"
+                    alt=" a preview of the project">
+                <p>Product Preview</p>
             </a>
         </article>
 
