Finished Single Pricing Grid

--- a/index.html
+++ b/index.html
@@ -54,6 +54,16 @@
         </article>
 
 
+        <article class="card">
+
+            <a href="./single-price-grid-component-master/index.html"> <img
+                    src="./single-price-grid-component-master/single-price-grid-component-sc.jpg"
+                    alt=" a preview of the project">
+                <p>Single Price Grid</p>
+            </a>
+        </article>
+
+
     </div>
 
 </body>
