Updated Index.html for FEM main

--- a/index.html
+++ b/index.html
@@ -64,6 +64,15 @@
         </article>
 
 
+        <article class="card">
+
+            <a href="./profile-card-component-main/index.html"> <img
+                    src="./profile-card-component-main/profile-card-component-sc.jpg" alt=" a preview of the project">
+                <p>Profile Card</p>
+            </a>
+        </article>
+
+
     </div>
 
 </body>
