--- a/news-homepage-main/index.html
+++ b/news-homepage-main/index.html
@@ -6,72 +6,74 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+
+  <link rel="stylesheet" href="style.css">
 
   <title>Frontend Mentor | News homepage</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
-
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
-  </style>
 </head>
 
 <body>
   <header>
     <img src="./assets/images/logo.svg" alt="logo">
     <nav>
+      <a class="home_nav" href=""> Home</a>
       <a href=""> New</a>
-      <a href=""> Home</a>
       <a href=""> Popular</a>
       <a href=""> Trending</a>
       <a href=""> Categories</a>
     </nav>
   </header>
+  <main>
+    <img class="hero" src="./assets/images/image-web-3-desktop.jpg" alt="Modern Art">
 
-  <img src="./assets/images/image-web-3-desktop.jpg" alt="Modern Art">
-  <h1>The Bright Future of Web 3.0?</h1>
+    <h1>The Bright Future of Web 3.0?</h1>
+    <div class="cta">
+      <p>We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of
+        the
+        people.
+        But is it really fulfilling its promise? </p>
 
-  <p>We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the
-    people.
-    But is it really fulfilling its promise? </p>
+      <button>Read more</button>
+    </div>
 
-  <button>Read more</button>
+    <div class="sidebar">
+      <h2>New</h2>
+      <div class="bar">
+        <h3><a href="#blank">Hydrogen VS Electric Cars</a></h3>
+        <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+      </div>
+      <div class="bar">
+        <h3><a href="#blank">The Downsides of AI Artistry</a></h3>
+        <p>What are the possible adverse effects of on-demand AI image generation?</p>
+      </div>
+      <div class="bar">
+        <h3><a href="#blank">Is VC Funding Drying Up?</a></h3>
+        <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
+      </div>
+    </div>
 
-  <div class="sidebar">
-    New
 
-    Hydrogen VS Electric Cars
-    Will hydrogen-fueled cars ever catch up to EVs?
+    <div class="articles">
+      <h2>01</h2>
+      <h3><a href="">Reviving Retro PCs</a></h3>
+      <p> What happens when old PCs are given modern upgrades?</p>
 
-    The Downsides of AI Artistry
-    What are the possible adverse effects of on-demand AI image generation?
+      <h2>02</h2>
+      <h3><a href="">Top 10 Laptops of 2022</a></h3>
+      <p> Our best picks for various needs and budgets.</p>
 
-    Is VC Funding Drying Up?
-    Private funding by VC firms is down 50% YOY. We take a look at what that means.
-  </div>
-  01
-  Reviving Retro PCs
-  What happens when old PCs are given modern upgrades?
-
-  02
-  Top 10 Laptops of 2022
-  Our best picks for various needs and budgets.
-
-  03
-  The Growth of Gaming
-  How the pandemic has sparked fresh opportunities.
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+      <h2>03</h2>
+      <h3><a href="">The Growth of Gaming</a></h3>
+      <p> How the pandemic has sparked fresh opportunities.</p>
+    </div>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="#">Your Name Here</a>.
+    </div>
+  </main>
 </body>
 
 </html>
